<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Divvy</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_deals_page">DealsPage</string>
    <string name="Login">Start Divvying</string>
    <string name="skip">Skip</string>
    <string name="timePick">I can wait until: </string>
    <string name="timeLeft">UserName will leave the mall in: </string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="claimDeal">Find Me A Match</string>
    <string name="completeDeal">Complete Deal</string>
    <string name="title_activity_data_sender">DataSender</string>
    <string name="title_activity_find_me_match">FindMeMatch</string>
    <string name="title_activity_complete_match">CompleteMatch</string>
    <string name="id">ID:</string>
    <string name="send">Send</string>
    <string name="claimedBy">ClaimedBy:</string>
    <string name="picture">Picture:</string>
    <string name="storeid">StoreID:</string>
    <string name="deadLine">deadLine:</string>
    <string name="image_button_delete">image_button_delete:</string>
    <string name="title_activity_add_deal">AddDeal</string>
    <string name="title_activity_chat_after_match">ChatAfterMatch</string>
    <string name="title_activity_store_page">StorePage</string>
    <string name="title_activity_add_new_deal">AddNewDeal</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_chat_history">ChatHistory</string>
    <string name="previous_chats">My Deals</string>
    <string name="other_user">Other User</string>
    <string name="date">Date</string>
    <string name="deal_description">Deal Description</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="Find_by_location">Find by location</string>
    <string name="title_activity_match_details">MatchDetails</string>
    <string name="title_activity_main_match_detail">MainMatchDetail</string>
    <string name="title_activity_page1_fragment">Page1Fragment</string>
    <string name="title_activity_page2_fragment">Page2Fragment</string>
    <string name="title_activity_mercury">MercuryActivity</string>
    <string name="title_activity_new_chat_screen">NewChatScreen</string>
    <string name="title_activity_match_summary">MatchSummary</string>
    <string name="with">With</string>
    <string name="transferToChat">Click To Chat</string>
    <string name="what">What</string>
    <string name="where">Where</string>
    <string name="in">In</string>

</resources>