<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.main.divvyapp.LoginPage" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/username"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:text="@string/username"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/phone"
        android:layout_alignLeft="@+id/phone"
        android:layout_alignStart="@+id/phone"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phone"
        android:layout_alignBottom="@+id/phone"
        android:text="@string/phone"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:text="@string/email"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_marginBottom="73dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:fontFamily="sans-serif"
        android:text="@string/Login" />

    <Button
        android:id="@+id/skip"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/email"
        android:layout_alignEnd="@+id/email"
        android:layout_marginBottom="16dp"
        android:text="@string/skip"
        android:fontFamily="sans-serif"
        android:onClick="goToDealsPageAndFinish" />

</RelativeLayout>